# translate_novels

./: .env.sample  .gitignore  pyproject.toml
src/novel_cli/: decorators.py  main.py  origins.py  scrapping.py  translate.py
src/novel_cli/database/: db.py
src/novel_cli/database/migrations/: 001_add_field_len.py
src/novel_cli/models/: novel.py
src/novel_cli/repository/: novel.py
