[project]
name = "novel_cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ollama>=0.6.2",
    "peewee>=4.1.1",
    "pytest-playwright>=0.8.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
novel_cli = "novel_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/novel_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
